syntax = "proto3"; 

// import "validate/validate.proto";
// import "google/api/annotations.proto";
import "students.proto";

option go_package = "/proto/gen;mainapi";

package main;


service TeachersService {
    rpc GetTeachers (GetTeacherRequest) returns (Teachers);
    rpc AddTeachers(Teachers) returns (Teachers);
    rpc UpdateTeachers (Teachers) returns (Teachers);
    rpc DeleteTeachers (TeacherIds) returns (DeleteTeacherConfirmation);
    rpc GetStudentsByClassTeacher (TeacherId) returns (Students);
    rpc GetStudentCountByClassTeacher (TeacherId) returns (StudentCount);
}

message StudentCount {
    bool status = 1;
    int32 student_count = 2;
}

message DeleteTeacherConfirmation {
    string status = 1;
    repeated string deleted_ids = 2;
}

message TeacherId {
    string id = 1;    
}

message TeacherIds {
    repeated TeacherId ids = 1;    
}

message GetTeacherRequest {
    Teacher teacher = 1;
    repeated SortField sort_by = 2;
}

message SortField {
    string field = 1;
    Order order = 2;
}

enum Order {
    ASC = 0;
    DESC = 1;
}

message Teacher {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string class = 5;
    string subject = 6;
}

message Teachers {
    repeated Teacher teachers = 1;
}
